[project]
name = "agentic-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "langchain>=1.3.9",
    "langchain-core>=1.0",
    "langchain-ollama>=1.1.0",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "pymupdf4llm>=1.27.2.3",
    "qdrant-client[fastembed]>=1.18.0",
    "streamlit>=1.58.0",
]
